test/classes/initializers/errors/errHandling/deinitSuperclass2.bad
deinitSuperclass2.chpl:50: In initializer:
deinitSuperclass2.chpl:51: error: cannot call a throwing function outside of a try! before phase 2
